--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,23 @@ body {
 .text-bright {
   color: var(--lightBlue);
 }
+
+.btn-black {
+  background: transparent;
+  text-transform: capitalize;
+  font-size: 0.8rem !important;
+  color: var(--mainDark) !important;
+  border-width: 0.2rem !important;
+  border-radius: 0 !important;
+}
+
+.btn-black:hover {
+  background: var(--mainDark) !important;
+  color: var(--mainWhite) !important;
+}
+
+.cart-icon {
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: var(--mainYellow);
+}
